/*
 * $Id: ChangeLog,v 1.5227 2006/10/31 02:41:19 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-11-01 19:13 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.c
    ! Fixed typo in hb_compOptimizeFrames() generation of HB_P_LARGEFRAME when static frame is ommited.

2006-10-30 23:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\ct\dattime3.prg
    ! fixed showtime() function to display time only in screen device
      and avoid printing time if "set device to printer" is seted while
      showtime is active, under gtwin.

2006-10-30 21:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * makefile.wc
    * added dllcall.c to rtl.lib, removed samples.lib, added libmisc.lib
  * source/rtl/hbhex2n.c
    * strip leading spaces in hb_hextonum()
  * source/ct/numconv.prg
    * chanded default value of the cPad parameter in ntoc()

2006-10-30 10:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\tbrowse.prg
    + added DataSource DATA to control if tbrowse was called via tbrowsedb() or
      tbrowsenew(). This is necessary to control reseting positionning of datasource
      row if datasource is not a database (array,etc). See configure() method.
    ! fixed configure() method to positionning the row when we perform a row
      movement before first stabilization process, for example: initialize
      tbrowse at last row, instead first calling gobottom() before stable.
    ! fixed ::RowCount and ::nNewRowPos values in configure() method.
    ! fixed AddColumn() method to call configure() method at first column
      addition, to avoid ::RowCount wrong value.
    ! fixed bound access error in ::aRedraw array.
    - moved CheckStable() method added by me in the last commit.

  * source\rtl\browdb.prg